--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,6 +1,3 @@
-<script src="https://widget.cloudinary.com/v2.0/global/all.js" type="text/javascript">
-</script>
-<script>
-  cloudinary.setCloudName("my-cloud");
-</script>
+<%= image_tag(avatar.image_url, :alt => avatar.short_name) %>
 
+<%= image_tag(avatar.image_url(:thumbnail), :width => 50, :height => 50) %>
