Working on getting Cloudinary widget functional. Looking into client-side image rotation. Issues with user partial interacting with widget.

--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,2 +1,7 @@
 <h1> Edit Your Info: </h1>
 <%= render partial: 'user', locals: {user: @user} %>
+
+<br>
+<br>
+<%= link_to 'Show', @user %> |
+<%= link_to 'Back', user_path(@user) %>
