--- a/app/views/users/_user.html.erb
+++ b/app/views/users/_user.html.erb
@@ -1,17 +1,69 @@
 <%= form_for user do |f| %>
-    <%= f.label "Name:" %><br>
-    <%= f.text_field :name %><br>
-    <%= f.label "Username:" %><br>
-    <%= f.text_field :username %><br>
-    <%= f.label "Email:" %><br>
-    <%= f.text_field :email %><br>
-    <%= f.label "Password:" %><br>
-    <%= f.password_field :password_digest %><br>
-    <%= f.label "Age: *optional" %><br>
-    <%= f.text_field :age %><br>
-    <%= f.label "Location: *optional" %><br>
-    <%= f.text_field :location %><br><br>
-    <%= f.label "Profile Pic:" %>  <%= f.file_field :avatar %><br>
-    <br>
-    <%= f.submit "Submit" %>
-<% end %>
+    <% if @user.errors.any? %>
+      <div id="error_explanation">
+        <h2><%= pluralize(user.errors.count, "error") %> prohibited this post from being saved:</h2>
+  
+        <ul>
+        <% user.errors.full_messages.each do |message| %>
+          <li><%= message %></li>
+        <% end %>
+        </ul>
+      </div>
+    <% end %>
+  
+    <div class="field">
+      <%= f.label :name %><br>
+      <%= f.text_field :name %>
+    </div>
+    <div class="field">
+      <%= f.label :username %><br>
+      <%= f.text_field :username %>
+    </div>
+    <div class="field">
+      <%= f.label :email %><br>
+      <%= f.text_field :email %>
+    </div>
+    <div class="field">
+      <%= f.label :password %><br>
+      <%= f.password_field :password_digest %>
+    </div>
+    <div class="field">
+      <%= f.label :age %><br>
+      <%= f.text_field :age %>
+    </div>
+    <div class="field">
+      <%= f.label :location %><br>
+      <%= f.text_field :location %>
+    </div>
+    <div class="field">
+      <%= f.label :avatar %><br>
+      <p id="upload_widget_opener"></p>
+    </div>
+
+<button id="upload_widget" class="cloudinary-button">Upload file</button><br><br>
+
+<script src="https://widget.cloudinary.com/v2.0/global/all.js" type="text/javascript"></script><br> 
+
+<script type="text/javascript">  
+var myWidget = cloudinary.createUploadWidget({
+  cloudName: 'ras060103', 
+  uploadPreset: 'uro4gldd'}, (error, result) => { 
+    if (!error && result && result.event === "success") { 
+      console.log('Done! Here is the image info: ', result.info); 
+    }
+  }
+)
+
+document.getElementById("upload_widget").addEventListener("click", function(){
+    myWidget.open();
+  }, false);
+</script><br>
+
+
+
+    <div class="actions">
+      <%= f.submit %>
+    </div>
+  <% end %>
+
+
