Cloudinary Widget button intefering with form submission, debugging

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,5 +1,4 @@
-<% unless @user.avatar_url.nil? %><%= image_tag @user.avatar_url %><br /><% end %>
-
+<h1> Hi there, <%= @user.name%>!</h1>
 
 <p>
   <strong>Avatar:</strong>
