Cloudinary widget button now working correctly, but images do not appear to be uploading correctly.

--- a/app/views/users/_user.html.erb
+++ b/app/views/users/_user.html.erb
@@ -38,7 +38,7 @@
     <div class="field">
       <%= f.label :avatar %><br>
       <p id="upload_widget_opener"></p>
-      <button id="upload_widget" class="cloudinary-button">Upload file</button><br><br>
+      <button type="button" id="upload_widget" class="cloudinary-button">Upload file</button><br><br>
     </div>
     <div class="actions">
       <%= f.submit %>
