--- a/app/views/categories/index.html.erb
+++ b/app/views/categories/index.html.erb
@@ -1,3 +1,4 @@
+<h1> Browse by Category: </h1>
 <% @categories.each do |category| %>
-    <%= link_to category.name, category_path(category) %>
+    <p><%= link_to category.name, category_path(category) %></p>
     <%end%>
