--- a/app/views/users/_user.html.erb
+++ b/app/views/users/_user.html.erb
@@ -29,7 +29,7 @@
 </div>
   <div class="field">
     <%= f.label :avatar %><br>
-    <p id="upload_widget_opener">Upload multiple images</p>
+    <%= f.attachinary_file_field :avatar, id: 'upload_widget_opener' %>
   </div>
   <div class="actions">
     <%= f.submit %>
@@ -37,9 +37,11 @@
 <% end %>
 
 <script src="//widget.cloudinary.com/global/all.js" type="text/javascript"></script>  
-          
+            
 <script type="text/javascript">  
   cloudinary.applyUploadWidget(document.getElementById('upload_widget_opener'), 
-    { cloud_name: 'ras060103', upload_preset: 'uro4gldd', field_name: 'user[avatar]', multiple: false }, 
+    { cloud_name: ENV['cloudinary_cloud'], upload_preset: 'uro4gldd', field_name: 'user[avatar]', multiple: false }, 
       function(error, result) {console.log(error, result)});
 </script>
+
+
