working on stubbing out a functional app before refactoring

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -21,17 +21,8 @@ body {
   font-size: 30px;
 }
 
-.footer {
-  text-align: center;
-  position: absolute;
-  bottom: 0;
-  width: 100%;
-  height: 2.5rem; 
-}
 
-.content {
-  padding:20px;
-}
+.content {padding:20px;}
 </style>
 </head>
 <body>
@@ -39,7 +30,6 @@ body {
 <div class="header">
   <h1>Pat My Dog!</h1>
   <p>Pat some dogs, let your dog get pats!</p>
-  <a href="/index.html"><img src="logo.gif" alt="logo" /></a>
 </div>
 
 <div class="content">
@@ -49,7 +39,7 @@ body {
 </div>
 
 <div class="footer">
-  <h2>Footer</h2>
+  <h2></h2>
 </div>
 
 </body>
