--- a/app/views/users/_user.html.erb
+++ b/app/views/users/_user.html.erb
@@ -29,19 +29,12 @@
 </div>
   <div class="field">
     <%= f.label :avatar %><br>
-    <%= f.attachinary_file_field :avatar, id: 'upload_widget_opener' %>
-  </div>
+    <%= f.file_field :avatar, id: 'upload_widget_opener' %>
+  </div><br><br>
   <div class="actions">
     <%= f.submit %>
   </div>
-<% end %>
 
-<script src="//widget.cloudinary.com/global/all.js" type="text/javascript"></script>  
-            
-<script type="text/javascript">  
-  cloudinary.applyUploadWidget(document.getElementById('upload_widget_opener'), 
-    { cloud_name: ENV['cloudinary_cloud'], upload_preset: 'uro4gldd', field_name: 'user[avatar]', multiple: false }, 
-      function(error, result) {console.log(error, result)});
-</script>
+<% end %>
 
 
