Working on nested resources for photos/users, getting photos/index to only be users photos

--- a/app/views/users/_user.html.erb
+++ b/app/views/users/_user.html.erb
@@ -29,7 +29,7 @@
 </div>
   <div class="field">
     <%= f.label :avatar %><br>
-    <%= f.file_field :avatar, id: 'upload_widget_opener' %>
+    <%= f.file_field :avatar %>
   </div><br><br>
   <div class="actions">
     <%= f.submit %>
