--- a/app/views/photos/new.html.erb
+++ b/app/views/photos/new.html.erb
@@ -1,14 +1,14 @@
 <%= form_for [@user, @photo] do |f| %>
-    <%= f.label :description %>
-    <%= f.text_area :description %>
-    <%= f.label :categories %>
+    <%= f.label :image %>
+    <%= f.file_field :image%><br><br>
+    <%= f.label :description %><br>
+    <%= f.text_area :description %><br>
+    <%= f.label :categories %><br>
     <%= f.collection_check_boxes(:category_ids, Category.all, :id, :name) do |b| %>
         <p>
         <%= b.check_box %>
         <%= b.label %>
         </p>
-        <%end%>
-    <%= f.label :image %>
-    <%= f.file_field :image%>
+        <%end%><br>
     <%= f.submit "Upload Image" %>
     <%end%>
