--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -10,5 +10,7 @@
 </p>
 
 
+<h2><%= @user.username %> has given <%= @user.pats.count %> <%= (@user.pats.count) == 1 ? 'pat' : 'pats'%> to good doggos! </h2>
+
 
 <%= link_to 'Edit Your Info', edit_user_path(@user) %> | <%= link_to "Pat Some Dogs!", photo_path %> | <%= link_to "Add Some Photos of Your Dog", new_user_photo_path(@user) %> | <%= link_to "See Your Dog's Photos", user_photos_path(@user) %>
