--- a/app/views/photos/index.html.erb
+++ b/app/views/photos/index.html.erb
@@ -1,7 +1,6 @@
 <% @photos.each do |photo| %>
 <div class="image">
-  <%= link_to (image_tag "#{photo.image}", size: "200"), profile_photo_path(@profile, photo)%><br>
+  <%= link_to (image_tag "#{photo.image}", size: "200"), profile_photo_path(photo.profile_id, photo)%><br>
 <% end %>
 </div>
 <br>
-<%= link_to "Add New Photo", new_profile_photo_path(@profile) %>
