--- a/app/views/photos/new.html.erb
+++ b/app/views/photos/new.html.erb
@@ -15,6 +15,10 @@
         <%= b.label %>
         </p>
         <%end%> 
-
+    <%= f.fields_for :categories do |category_builder| %>
+        <%= category_builder.label :add_a_new_category %>
+        <%= category_builder.text_field :name %>
+        <%end%> 
+            <br>
     <%= f.submit "Upload Image" %>
     <%end%>
