--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,7 +16,7 @@ body {
 .header {
   padding: 60px;
   text-align: center;
-  background: #1abc9c;
+  background: #f54263;
   color: white;
   font-size: 30px;
 }
@@ -32,7 +32,7 @@ body {
 <body>
 
 <div class="header">
-  <h1>Pat My Dog!</h1>
+  <h1>Pat My Dog</h1>
   <p>Pat some dogs, let your dog get pats!</p>
 </div>
 
