--- a/app/views/photos/show.html.erb
+++ b/app/views/photos/show.html.erb
@@ -1,7 +1,11 @@
 <h1> <%= link_to @profile.user.name, profile_path(@profile) %>'s Photo of </h1>
+<% if @photo.album %>
+<h2>from <%= link_to @photo.album.name, profile_album_path(@profile, @photo.album) %>
+<%end%>
 <h3><strong>Pats: <p><%= @photo.pats.count %> <%= (@photo.pats.count) == 1 ? 'Pat' : 'Pats'%></p></strong></h3>
-<h2> Click me to give me a pat! </h2>
-<%= link_to (cl_image_tag "#{@photo.image}", size: "400"), photo_pats_path(@photo), :method => :post %>
+<h4><%= photo_pats?(@photo) %></h4>
+<h2> Click me to give me a pat! </h2>s
+<%= link_to (cl_image_tag "#{@photo.image}"), photo_pats_path(@photo), :method => :post %>
 
 
 
@@ -11,7 +15,26 @@
 <br>
 
 <h5> Categories: </h5>
-<% @photo.categories.each do |category| %>
+<% @categories.each do |category| %>
     <h6><%= link_to category.name, category_path(category)%></h6>
     <%end%>
+<br>
+<br>
+
+<h4> Comments:</h4>
+<% @comments.each do |comment| %>
+    <p><%= link_to comment.comment_user, profile_path(@profile) %> says: <%= comment.content %></p>
+<%end%>
+<h5><%= photo_comments?(@photo) %></h5>
+<br>
+<h4>Add a Comment</h4>
+<%= form_for @comment do |f| %>
+<%= hidden_field_tag "comment[photo_id]", @photo.id %>
+<%= hidden_field_tag "comment[user_id]", @user.id%>
+<%= f.text_area :content %>
+<br>
+<%= f.submit %>
+<% end %>
+
+
     
