--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,2 +1,19 @@
+<%= stylesheet_link_tag "pages" %>
+<!DOCTYPE html>
+<html>
+<head>
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<%= stylesheet_link_tag "pages" %>
+
+<div class="bg-img">
+<div class="container">
 <%= link_to "Sign In", login_path %><br>
 <%= link_to "Create Account", new_user_path %>
+</div>
+</div>
+
+</head>
+<body>
+
+</body>
+</html>
