--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -7,6 +7,7 @@
 
 <div class="bg-img">
 <div class="container">
+<%= link_to('Log in with Facebook', '/auth/facebook') %><br>
 <%= link_to "Sign In", login_path %><br>
 <%= link_to "Create Account", new_user_path %>
 </div>
