addding more css

--- a/app/views/photos/new.html.erb
+++ b/app/views/photos/new.html.erb
@@ -1,3 +1,4 @@
+<h1> Add a Photo of Your Pup</h1>
 <%= form_for [@profile, @photo] do |f| %>
     <%= f.label :image%>
     <%= f.file_field :image %>
