--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -36,27 +36,32 @@ body {
   font-size: 18px;
 }
 
-button {
-  border: none;
-  outline: 0;
-  display: inline-block;
-  padding: 8px;
-  color: white;
-  background-color: #000;
-  text-align: center;
-  cursor: pointer;
-  width: 100%;
-  font-size: 18px;
+/* Add a black background color to the top navigation */
+.topnav {
+  background-color: #333;
+  overflow: hidden;
 }
 
-a {
+/* Style the links inside the navigation bar */
+.topnav a {
+  float: left;
+  color: #f2f2f2;
+  text-align: center;
+  padding: 14px 16px;
   text-decoration: none;
-  font-size: 22px;
+  font-size: 17px;
+}
+
+/* Change the color of links on hover */
+.topnav a:hover {
+  background-color: #ddd;
   color: black;
 }
 
-button:hover, a:hover {
-  opacity: 0.7;
+
+.topnav a.active {
+  background-color: #009699;
+  color: white;
 }
 
 </style>
@@ -66,6 +71,14 @@ button:hover, a:hover {
   <h1>Pat My Dog</h1>
   <p>Pat some dogs, let your dog get pats!</p>
 </div>
+
+<div class="topnav">
+  <%= link_to "Account", user_path(current_user), class: "active"%>
+  <%= link_to "Profile", profile_path(current_user.profile) %>
+  <%= link_to "Your Photos", profile_photos_path(current_user.profile) %>
+  <%= link_to "Logout", logout_path %>
+</div>
+
 <div class="container">
   <div class="row">
     <div class="col-sm-2">
@@ -76,8 +89,8 @@ button:hover, a:hover {
   <p><%=current_user.pats.count%> <%= (current_user.pats.count) == 1 ? 'Pat' : 'Pats'%> Given</p>
 </div>
       <h3 style="text-align:center">Menu</h3>
-      <p style="text-align:center"><%= link_to "Pat Some Dogs!", photo_path %></p>
-      <p style="text-align:center">link</p>
+      <p style="text-align:center"><%= link_to "Pat Some Dogs!", photos_path %></p>
+      <p style="text-align:center"><%= link_to "Add Photos of Your Dog!", new_profile_photo_path(current_user.profile)%></p>
       <p style="text-align:center">link</p>
     </div>
   <div class="col-sm-10">
