--- a/app/views/albums/show.html.erb
+++ b/app/views/albums/show.html.erb
@@ -1,21 +1,22 @@
-<h1><%=link_to @profile.user.username, profile_path(@profile)%>'s Album: <%= @album.name %></h1>
+<%= stylesheet_link_tag "albums" %>
 
-<div class="actions">
-  <a class="upload_link" href="<%= new_album_photo_path(@album) %>">Add photo</a>
-</div>
+<h1><%=link_to @profile.user.username?, profile_path(@profile)%>'s Album: <%= @album.name %></h1>
 
-<div class="albums">
-  <% if @album.photos.empty? %>
-    <p>No photos were added to the album yet.</p>
+
+ <%= link_to "Add a Photo", new_album_photo_path(@album, profile_id: @profile) %>
+
+
+<% if @album.photos.empty? %>
+  <p>No photos were added to the album yet.</p>
+<% end %>
+
+  <% @album.photos.each_slice(4) do |photos| %>
+    <div class="row">
+    <% photos.each do |photo| %>
+      <div class="column"><%= link_to (cl_image_tag photo.image.thumbnail.url, :class => "thumbnail inline"), photo_path(photo)%>
+       <h2><%= photo.description %></h2></div>
   <% end %>
-
-  <% @album.photos.each do |photo| %>
-    <div class="photo">
-      <%= link_to (cl_image_tag photo.image.thumbnail.url, :class => "thumbnail inline"), photo_path(photo)%>
-       <h2><%= photo.description %></h2>
-    </div>
-  <% end %>
 </div>
+<%end%>
 
-<a href="<%= profile_albums_path(@profile) %>" class="back_link">Back to albums</a>
-
+<%=link_to "All Albums", profile_albums_path(@profile) %>
