--- a/app/assets/stylesheets/pages.scss
+++ b/app/assets/stylesheets/pages.scss
@@ -20,3 +20,27 @@
   padding: 35px;
   background-color: white;
 }
+
+
+.error_explanation {
+  position: relative;
+  padding: 10px;
+  background-color: white;
+  border-radius:.7em;
+  border: 2px solid;
+  border-color: red;
+  color: red;
+  margin-top: 10px;
+  margin-right: 10px;
+  margin-bottom: 10px;
+  width: auto;
+  height: auto;
+}
+
+.closebtn {
+  position: absolute;
+  right: 100px;
+  top: 100px;
+  color: red;
+  font-weight: bold;
+}
