--- a/app/assets/stylesheets/photos.scss
+++ b/app/assets/stylesheets/photos.scss
@@ -9,3 +9,27 @@
     display: table;
     clear: both;
   }
+
+  .error_explanation {
+    position: relative;
+    padding: 5px;
+    background-color: white;
+    border: 2px solid;
+    border-color: red;
+    color: red;
+    margin-top: 5px;
+    margin-right: 5px;
+    margin-bottom: 5px;
+    width: auto;
+    height: auto;
+  }
+  
+  .closebtn {
+    position: absolute;
+    font-size: 1em;
+    padding: 5px;
+    top: 4px;
+    right: 16px;
+    color: red;
+    font-weight: bold;
+  }
