--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -36,6 +36,29 @@ body {
   font-size: 18px;
 }
 
+.error_explanation {
+  position: relative;
+  padding: 10px;
+  background-color: white;
+  border-radius:.7em;
+  border: 2px solid;
+  border-color: red;
+  color: red;
+  margin-top: 10px;
+  margin-right: 10px;
+  margin-bottom: 10px;
+  width: auto;
+  height: auto;
+}
+
+.closebtn {
+  position: absolute;
+  right: 100px;
+  top: 100px;
+  color: red;
+  font-weight: bold;
+}
+
 /* Add a black background color to the top navigation */
 .topnav {
   background-color: #606363;
@@ -67,6 +90,8 @@ body {
 </style>
 </head>
 <body>
+
+
 <div class="header">
   <img src="https://i.ibb.co/vwJm0zD/419px-Paw-print.png" alt="419px-Paw-print" border="0">
   <h1>Pat My Dog</h1>
