--- a/app/views/photos/new.html.erb
+++ b/app/views/photos/new.html.erb
@@ -1,5 +1,23 @@
+<%= stylesheet_link_tag "photos" %>
+<% if @photo.errors.any? %>
+   <div class="error_explanation">
+   <div class="closebtn" onclick="this.parentElement.style.display='none';">&times;</div>
+     <h2>
+       <%= pluralize(@photo.errors.count, "error") %>
+       prohibited this post from being saved:
+     </h2>
+  
+     <ul>
+     <% @photo.errors.full_messages.each do |msg| %>
+       <li><%= msg %></li>
+     <% end %>
+     </ul>
+   </div>
+ <% end %>
+
+
 <h1> Add a Photo of Your Pup</h1>
-<%= form_for [@profile, @photo] do |f| %>
+<%= form_for [@profile, @photo], url: profile_photos_path(@profile) do |f| %>
     <%= f.label :image%>
     <%= f.file_field :image %>
         <br><br><br>
@@ -7,7 +25,7 @@
     <%= f.label :description %><br>
     <%= f.text_area :description %><br>
     <%= f.label :categories %><br>
-    <%= collection_check_boxes(:photo, :category_ids, @categories, :id, :name) do |b| %>
+    <%= f.collection_check_boxes(:category_ids, Category.where("name is not null and name != ''"), :id, :name) do |b| %>
         <p>
         <%= b.check_box %>
         <%= b.label %>
