--- a/app/assets/stylesheets/comments.scss
+++ b/app/assets/stylesheets/comments.scss
@@ -4,24 +4,25 @@
 
 
 .error_explanation {
-    position: relative;
-    padding: 10px;
-    background-color: white;
-    border-radius:.7em;
-    border: 2px solid;
-    border-color: red;
-    color: red;
-    margin-top: 10px;
-    margin-right: 10px;
-    margin-bottom: 10px;
-    width: auto;
-    height: auto;
-  }
-  
-  .closebtn {
-    position: absolute;
-    right: 100px;
-    top: 100px;
-    color: red;
-    font-weight: bold;
-  }
+  position: relative;
+  padding: 5px;
+  background-color: white;
+  border: 2px solid;
+  border-color: red;
+  color: red;
+  margin-top: 5px;
+  margin-right: 5px;
+  margin-bottom: 5px;
+  width: auto;
+  height: auto;
+}
+
+.closebtn {
+  position: absolute;
+  font-size: 1em;
+  padding: 5px;
+  top: 4px;
+  right: 16px;
+  color: red;
+  font-weight: bold;
+}
