--- a/app/views/albums/new.html.erb
+++ b/app/views/albums/new.html.erb
@@ -1,37 +1,35 @@
-<div class='basic_form'>
+<%= stylesheet_link_tag "albums" %>
+<% if @album.errors.any? %>
+   <div class="error_explanation">
+   <div class="closebtn" onclick="this.parentElement.style.display='none';">&times;</div>
+     <h2>
+       <%= pluralize(@album.errors.count, "error") %>
+       prohibited this post from being saved:
+     </h2>
+  
+     <ul>
+     <% @album.errors.full_messages.each do |msg| %>
+       <li><%= msg %></li>
+     <% end %>
+     </ul>
+   </div>
+ <% end %>  
+
+
 <h1> Create a New Album </h1>
-<%= form_for [@profile, @album] do |f| %>
-    <div class="form_line">
+<%= form_for [@profile, @album], url: profile_albums_path(@profile) do |f| %>
         <%= f.label :name, "Album Name:" %><br>
-            <div class="form_controls">
                 <%= f.text_field :name %><br>
-            </div>
-    </div>
-    <div class="form_line">
         <%= f.label :description, "Description:" %><br>
-            <div class="form_controls">
                 <%= f.text_area :description %><br>
-            </div>
-    </div>
-        <div class="form_controls">
             <%= hidden_field_tag "album[profile_id]", @profile.id %><br>
-        </div>
-    <div class="form_line">
         <%= f.label :add_existing_photos, "Add Existing Photos:" %><br>
-            <div class="form_controls">
-                <%= collection_check_boxes(:album, :photo_ids, @photos, :id, :image) do |b| %>
+                <%= f.collection_check_boxes(:photo_ids, @profile.photos.where("album_id is null"), :id, :image) do |b| %>
                 <p>
                 <%= b.check_box + cl_image_tag(b.object.image.model.image)%>
                 </p>    
             </div>
-        </div>
         <%end%> 
-        <div class="form_line">
-            <div class="form_controls">
                 <%= f.submit %>
-                <% if @error %><span class="error"><%= @error %></span><% end %>
-            </div>
-        </div>
     <%end%>
-    </div>
 
