--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,2 +1,23 @@
+<%= stylesheet_link_tag "user" %>
+<% if @user.errors.any? %>
+   <div class="error_explanation">
+   <div class="closebtn" onclick="this.parentElement.style.display='none';">&times;</div>
+     <h2>
+       <%= pluralize(@user.errors.count, "error") %>
+       prohibited this post from being saved:
+     </h2>
+  
+     <ul>
+     <% @user.errors.full_messages.each do |msg| %>
+       <li><%= msg %></li>
+     <% end %>
+     </ul>
+   </div>
+ <% end %>
+
+<div class="bg-img">
+<div class = "container">
 <h1> Signup: </h1>
 <%= render partial: 'user', locals: {user: @user} %>
+</div>
+</div>
