--- a/app/views/photos/show.html.erb
+++ b/app/views/photos/show.html.erb
@@ -1,6 +1,3 @@
-
-
-
 <h1> <%= link_to @photo.profile.user.username?, profile_path(@photo.profile) %>'s Photo </h1>
 <% if @photo.album %>
 <h2>from <%= link_to @photo.album.name, profile_album_path(@profile, @photo.album) %>
@@ -9,9 +6,13 @@
 <h4><%= photo_pats?(@photo) %></h4>
 <h2> Click me to give me a pat! </h2>
 <%= link_to (cl_image_tag "#{@photo.image}"), photo_pats_path(@photo), :method => :post %>
-
-
-
+<br>
+<br>
+<% if @photo.profile_id == @user.profile.id %>
+<%= form_tag profile_photo_path(@profile, @photo), method: "delete" do %>
+  <%= submit_tag "Delete This Photo" %>
+<% end %>
+<% end %>
 
 <h2>Description:</h2> <h4><%= @photo.description %></h4>
 <br>
@@ -38,6 +39,8 @@
 <br>
 <%= f.submit %>
 <% end %>
+
+
 
 
     
