users new errors working

--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,4 +1,4 @@
-<%= stylesheet_link_tag "user" %>
+<%= stylesheet_link_tag "users" %>
 <% if @user.errors.any? %>
    <div class="error_explanation">
    <div class="closebtn" onclick="this.parentElement.style.display='none';">&times;</div>
