css change for root, login, and signup paths

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -6,12 +6,14 @@
 <%= stylesheet_link_tag "pages" %>
 
 <div class="bg-img">
+<div class="centered">Welcome to Pat My Dog!</div>
 <div class="container">
-<%= link_to('Log in with Facebook', '/auth/facebook') %><br>
-<%= link_to "Sign In", login_path %><br>
+<%= link_to('Login with Facebook', '/auth/facebook') %><br>
+<%= link_to "Login", login_path %><br>
 <%= link_to "Create Account", new_user_path %>
 </div>
 </div>
+
 
 </head>
 <body>
