--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -16,6 +16,7 @@
  <% end %>
 
 <div class="bg-img">
+<div class="centered">Welcome to Pat My Dog!</div>
 <div class = "container">
 <h1> Signup: </h1>
 <%= render partial: 'user', locals: {user: @user} %>
