--- a/app/assets/stylesheets/pages.scss
+++ b/app/assets/stylesheets/pages.scss
@@ -4,13 +4,15 @@
 }
 
 .bg-img {
-  background-image: url("https://i.ibb.co/FzPcnFy/paw-print-220229-1280.png");
-  min-height: 650px;
+  background-image: url("https://i.ibb.co/NZ18JN3/paw-print-220229.jpg");
+  min-height: 680px;
   background-position: center;
-  background-repeat: no-repeat;
-  background-size: cover;
+  background-repeat: repeat;
+  background-size: auto;
   position: relative;
+  text-align: center;
 }
+
 
 .container {
   position: absolute;
@@ -19,6 +21,22 @@
   max-width: 300px;
   padding: 35px;
   background-color: white;
+  border: 4px solid;
+  border-color: #a8d408;
+}
+
+.centered {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  background-color: #6032a8;
+  color: white;
+  padding-left: 20px;
+  padding-right: 20px;
+  padding-top: 10px;
+  padding-bottom: 10px;
+  font-size: 60px;
 }
 
 
