--- a/app/views/layouts/login.html.erb
+++ b/app/views/layouts/login.html.erb
@@ -17,22 +17,38 @@ body, html {
 }
 
 .bg-img {
-  background-image: url("https://i.ibb.co/FzPcnFy/paw-print-220229-1280.png");
-  min-height: 650px;
+  background-image: url("https://i.ibb.co/NZ18JN3/paw-print-220229.jpg");
+  min-height: 680px;
   background-position: center;
-  background-repeat: no-repeat;
-  background-size: cover;
+  background-repeat: repeat;
+  background-size: auto;
   position: relative;
+  text-align: center;
 }
 
-/* Add styles to the form container */
 .container {
   position: absolute;
-  right: 0;
-  margin: 20px;
+  right: 14px;
+  margin: 30px;
   max-width: 300px;
-  padding: 16px;
+  padding: 35px;
   background-color: white;
+  border: 4px solid;
+  border-color: #a8d408;
+}
+
+.centered {
+  position: absolute;
+  top: 35%;
+  left: 35%;
+  transform: translate(-50%, -50%);
+  background-color: #6032a8;
+  color: white;
+  padding-left: 20px;
+  padding-right: 20px;
+  padding-top: 10px;
+  padding-bottom: 10px;
+  font-size: 60px;
 }
 
 /* Full-width input fields */
